--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -1,12 +1,12 @@
     html {
   --primary-color: #fff;
-  --secondary-color: #282c34;
+  --secondary-color: #24314a;
   --terciary-color:white;
 }
 
 
 html[data-theme="dark"] {
-  --primary-color: #282c34;
+  --primary-color: #24314a;
   --secondary-color: #fff;
     --terciary-color:white;
 }
