--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -1,14 +1,20 @@
 
+@font-face {
+    font-family:"Orbitron";
+  }
+
     .Header {
   background-color: var(--primary-color);
   color:var(--secondary-color);
   text-align: center;
-  padding: 2vh 20vw 2vh 20vw;
-  font-size:6vw;
+  padding: 1vh 20vw 1vh 20vw;
+  font-size:3vw;
     };
 
 
     .Header p{
     margin:0px;
+    font-family:Orbitron;
+    letter-spacing: 5px;
     }
 
