--- a/src/Auth.module.scss
+++ b/src/Auth.module.scss
@@ -40,7 +40,7 @@
 };
 
 
-input[type="submit"] {
+.Control input[type="submit"] {
     -webkit-appearance: button;
     height: 50px;
     width: 150px;
