--- a/src/MiniPost.module.scss
+++ b/src/MiniPost.module.scss
@@ -1,14 +1,43 @@
 .root{
 	    min-width: 300px;
 	    max-width: 300px;
-	    min-height: 350px;
-	    max-height: 350px;
+	    height: 400px;
 	    margin:10px;
 }
 
+.content{
+		height: 380px;
+	    font-size: 0.7em;
+	    color:#44413c;
+}
+
+.intro{
+margin: 1em;
+    text-align: justify;
+    font-size: 1.2em;
+}
+
+
+
+
+
 .title{
-    fontSize: 20;
-    font-size: larger;
-    font-weight: bold;
+    margin: 30px 0px 45px 0px;
+    font-size: 1.45em;
+    font-weight: 570;
+    color:#44413c;
     text-align: center;
+}
+
+
+.MiniPostFooter{
+
+	background-color:#ffc107;
+height: 20px;
+    justify-content: flex-end;
+}
+
+.MiniPostFooter button{
+			    font-size: 0.5em;
+			    font-weight: 900;
 }
