--- a/src/Register.module.scss
+++ b/src/Register.module.scss
@@ -40,11 +40,10 @@
 };
 
 
-input[type="submit"] {
+.Control input[type="submit"] {
     -webkit-appearance: button;
     height: 50px;
     width: 150px;
-    margin: 20px 0 20px 25vw;
     color:var(--secondary-color);
     background-color: var(--primary-color);
 }
