--- a/src/Services.module.scss
+++ b/src/Services.module.scss
@@ -17,6 +17,7 @@
 
 .WebsiteDevelopment{
 	flex:0.3;
+	
 }
 
 .dAppDevelopment{
@@ -29,4 +30,27 @@
 	flex-direction:column;
 	align-items: center;
 	color:var(--primary-color);
+    margin: 0px 20px 100px 20px;
 }
+
+
+.LearnMore > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom:20px;
+}
+
+.LearnMore div > h3{
+    color: #ffc107;
+    font-size: 1.3em;
+}
+
+.LearnMore div > p{
+    margin: 5px;
+    font-size: 0.9em;
+}
+
+
+
+
