--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -3,6 +3,7 @@
   --secondary-color: #24314a;
   --terciary-color:white;
   --link-color:#e8db3b;
+  --light-text:#44413c;
 }
 
 
@@ -11,6 +12,7 @@ html[data-theme="dark"] {
   --secondary-color: #fff;
     --terciary-color:white;
     --link-color:#f1a214;
+      --light-text:#adb2bb;
 }
 
 *{
