--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -8,7 +8,7 @@
   color:var(--secondary-color);
   text-align: center;
   padding: 1vh 20vw 1vh 20vw;
-  font-size:3vw;
+  font-size: 1.5em;
     };
 
 
@@ -17,4 +17,22 @@
     font-family:Orbitron;
     letter-spacing: 5px;
     }
+
+
+
+    @media screen and (min-width: 768px) {
+
+    .Header {
+  font-size: 3em;
+    };
+
+}
+
+    @media screen and (max-width: 768px) {
+
+    .Header {
+  font-size: 1.5em;
+    };
+
+}
 
