--- a/src/Navbar.module.scss
+++ b/src/Navbar.module.scss
@@ -35,6 +35,8 @@ height:100%;
 
 .HideNav{
 height:fit-content;
+display:none;
+transition: display 1s;
 }
 
 .Navbar ul li a:hover span{
@@ -96,14 +98,14 @@ width:200px;
 @media screen and (max-width: 768px) {
 
 	.ExpandButton{
-	font-size: 30px;
-	margin-right: 30px;
+	font-size: 20px;
+	display: flex;
+    flex-direction: row-reverse;
 	color: var(--secondary-color);
 	background: transparent;
 	border: none;
 	cursor: pointer;
 	outline: none;
-	float: right;
 	}
 
 	.Navbar ul {
