--- a/src/Sitemap.module.scss
+++ b/src/Sitemap.module.scss
@@ -26,3 +26,20 @@
   color:var(--primary-color);
   font-size: small;
 };
+
+
+    @media screen and (min-width: 768px) {
+
+    .SSS h2 {
+  font-size: 1.5em;
+    };
+
+}
+
+    @media screen and (max-width: 768px) {
+
+    .SSS h2 {
+  font-size: 1.2em;
+    };
+
+}
