--- a/src/Blog.module.scss
+++ b/src/Blog.module.scss
@@ -21,7 +21,7 @@
 	flex-direction:row;
 	flex-wrap:wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: var(--primary-color);
 	padding:0 5vw 10vh 5vw;
     height: fit-content;
