--- a/src/Navbar.module.scss
+++ b/src/Navbar.module.scss
@@ -21,12 +21,13 @@ text-decoration:none;
 text-transform:uppercase;
 font-size: smaller;
 transition: font-size 2s;
-
+transition-timing-function: ease-in-out;
 };
 
 .Navbar a span{
 transition: background-color 1.5s;
 transition: color 1.5s;
+transition-timing-function: ease-in-out;
 }
 
 .ShowNav{
@@ -37,6 +38,7 @@ height:100%;
 height:fit-content;
 display:none;
 transition: display 1s;
+transition-timing-function: ease-in-out;
 }
 
 .Navbar ul li a:hover span{
